# PDFShell

./: .env.sample  .gitignore  COMMAND_REFERENCE.md  Dockerfile  Pdf_Templates.py  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  test_pg_connect.py  test_psycopg2_direct.py
.github/workflows/: ci.yml
agent/: agent.py
apptrace/: apps.py
apptrace/migrations/: 0001_initial.py
cli/: main.py
core/: alert.py  engine.py  secure.py
coreapi/: serializers.py  urls.py  views.py
coreapi/management/commands/: cleanup_uploads.py
infra/: agent-config.yaml
pdfshell-ui/: .gitignore  nuxt.config.ts  package.json  pnpm-lock.yaml  tailwind.config.js
pdfshell-ui/components/: PdfPreviewModal.vue  SessionFilesSidebar.vue
pdfshell-ui/composables/: useApi.ts
pdfshell-ui/layouts/: default.vue
pdfshell-ui/pages/: history.vue  index.vue
pdfshell-ui/server/api/: nl.post.ts
pdfshell-ui/store/: history.ts
pdfshell/shell/: app.py  core.py
pdfshell/shell/commands/: merge.py
pdfshell_srv/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_agent.py  test_api.py  test_pg_connect.py  test_tools.py
tools/: add_stamp.py  add_stamp.yml  loader.py  merge.py  merge.yml  redact.py  redact.yml  split.py  split.yml
trace/: apps.py  models.py
